Reworking all datas to fit MongoDB